--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@openintegrationhub/ferryman": "^1.1.5",
+    "jsforce": "^1.10.1",
     "request": "^2.88.0",
     "request-promise": "4.1.1",
     "uuid": "^8.2.0"
