--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   },
   "dependencies": {
     "@openintegrationhub/ferryman": "^2.2.0",
+    "dayjs": "^1.11.7",
     "jsforce": "^1.10.1",
     "request": "^2.88.0",
-    "request-promise": "4.1.1",
-    "uuid": "^8.2.0"
+    "request-promise": "4.1.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -39,11 +39,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-mocha": "^5.2.0",
-    "jenkins-mocha": "^8.0.0",
-    "mocha": "^8.1.1",
-    "nock": "^9.6.1",
-    "nyc": "^15.1.0",
-    "supertest": "^3.3.0"
+    "mocha": "^10.2.0"
   },
   "license": "Apache 2.0"
 }
